machines, packets, pipenet, parts of recipes, integration left. ALMOST DONE!!?