@@ -16,7 +16,7 @@ import com.gregtechceu.gtceu.data.recipe.GTRecipeTypes;
 import com.gregtechceu.gtceu.common.recipe.builder.GTRecipeBuilder;
 
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.data.recipes.RecipeOutput;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.TagKey;
 import net.minecraft.util.Tuple;
@@ -28,7 +28,6 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 import java.util.Map.Entry;
-import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -43,7 +42,7 @@ public class RecyclingRecipes {
     // TODO - (to remember) Do NOT calculate any material component lists for circuits, they are simply totally lost
     // TODO - Work on durations and EUt's
 
-    public static void init(Consumer<FinishedRecipe> provider) {
+    public static void init(RecipeOutput provider) {
         for (var entry : ChemicalHelper.getAllItemInfos()) {
             ItemStack itemStack = entry.getFirst();
             ItemMaterialInfo materialInfo = entry.getSecond();
@@ -52,7 +51,7 @@ public class RecyclingRecipes {
         }
     }
 
-    public static void registerRecyclingRecipes(Consumer<FinishedRecipe> provider, ItemStack input,
+    public static void registerRecyclingRecipes(RecipeOutput provider, ItemStack input,
                                                 List<MaterialStack> components, boolean ignoreArcSmelting,
                                                 @Nullable TagPrefix prefix) {
         // Gather the valid Materials for use in recycling recipes.
@@ -80,7 +79,7 @@ public class RecyclingRecipes {
         if (ignoreArcSmelting) return;
 
         if (components.size() == 1) {
-            Material m = components.get(0).material();
+            Material m = components.getFirst().material();
 
             // skip non-ingot materials
             if (!m.hasProperty(PropertyKey.INGOT)) {
@@ -102,7 +101,7 @@ public class RecyclingRecipes {
         registerArcRecycling(provider, input, components, prefix);
     }
 
-    private static void registerMaceratorRecycling(Consumer<FinishedRecipe> provider, ItemStack input,
+    private static void registerMaceratorRecycling(RecipeOutput provider, ItemStack input,
                                                    List<MaterialStack> materials, int multiplier) {
         // Finalize the output list.
         List<ItemStack> outputs = finalizeOutputs(
@@ -133,11 +132,7 @@ public class RecyclingRecipes {
             builder.inputItems(inputTag);
         }
 
-        boolean recycle = true;
-        if (!entry.isEmpty() && entry.tagPrefix() == TagPrefix.ingot) {
-            recycle = false;
-        }
-
+        boolean recycle = entry.isEmpty() || entry.tagPrefix() != TagPrefix.ingot;
         if (recycle) {
             builder.category(GTRecipeCategories.MACERATOR_RECYCLING);
         }
@@ -145,7 +140,7 @@ public class RecyclingRecipes {
         builder.save(provider);
     }
 
-    private static void registerExtractorRecycling(Consumer<FinishedRecipe> provider, ItemStack input,
+    private static void registerExtractorRecycling(RecipeOutput provider, ItemStack input,
                                                    List<MaterialStack> materials, int multiplier,
                                                    @Nullable TagPrefix prefix) {
         MaterialEntry entry = ChemicalHelper.getMaterialEntry(input.getItem());
@@ -232,7 +227,7 @@ public class RecyclingRecipes {
         extractorBuilder.save(provider);
     }
 
-    private static void registerArcRecycling(Consumer<FinishedRecipe> provider, ItemStack input,
+    private static void registerArcRecycling(RecipeOutput provider, ItemStack input,
                                              List<MaterialStack> materials, @Nullable TagPrefix prefix) {
         MaterialEntry entry = ChemicalHelper.getMaterialEntry(input.getItem());
         TagKey<Item> inputTag = null;
@@ -309,7 +304,7 @@ public class RecyclingRecipes {
                                                   @NotNull List<ItemStack> outputs) {
         if (prefix == TagPrefix.nugget || prefix == TagPrefix.ingot || prefix == TagPrefix.block) {
             if (outputs.size() == 1) {
-                MaterialEntry entry = ChemicalHelper.getMaterialEntry(outputs.get(0).getItem());
+                MaterialEntry entry = ChemicalHelper.getMaterialEntry(outputs.getFirst().getItem());
                 if (!entry.isEmpty()) {
                     Material mat = inputStack.material();
                     if (!mat.hasFlag(IS_MAGNETIC) && mat.hasProperty(PropertyKey.INGOT)) {
@@ -405,7 +400,7 @@ public class RecyclingRecipes {
         // No blast temperature in the list means no multiplier
         if (highestTemp == 0) return 1;
 
-        // If less then 2000K, multiplier of 4
+        // If less than 2000K, multiplier of 4
         if (highestTemp < 2000) return 4; // todo make this a better value?
 
         // If above 2000K, multiplier of 16
@@ -468,7 +463,7 @@ public class RecyclingRecipes {
                         splitStacks(split, stack, entry);
                         shrinkStacks(shrink, stack, entry);
 
-                        if (split.get(0).getB().amount() > shrink.get(0).getB().amount()) {
+                        if (split.getFirst().getB().amount() > shrink.getFirst().getB().amount()) {
                             outputs.addAll(split);
                         } else outputs.addAll(shrink);
                     }
